objects/WT_Business_Unit_Entity_Staging__c.object
<CustomObject>
    <fields>
        <fullName>WT_Bank_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_Num_Of_Transactions__c</fullName>
        <label>Branch Customer Number Of Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_TPC__c</fullName>
        <label>Branch Customer TPC</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customer_Transaction_Percent__c</fullName>
        <label>Branch Customer with Transaction %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Customers_Transaction__c</fullName>
        <label>Branch Customers Transaction</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter_Factor__c</fullName>
        <label>Charter Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Factor__c</fullName>
        <label>Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Foot_Traffic_Level__c</fullName>
        <label>Foot Traffic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Fusion_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fusion Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Market__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_New_Customers__c</fullName>
        <label>New Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Current_Bank_Customers__c</fullName>
        <label>Total Current Bank Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Customers__c</fullName>
        <label>Total Customers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Foot_Traffic__c</fullName>
        <label>Total Foot Traffic</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Total_Number_Of_Transactions__c</fullName>
        <label>Total Number Of Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Customer_TPC__c</fullName>
        <label>Unique Customer TPC</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Customers_Transaction__c</fullName>
        <label>Unique Customers Transaction</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Branch Factor Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Branch__c</columns>
        <columns>WT_Bank_Number__c</columns>
        <columns>WT_Branch_Number__c</columns>
        <columns>WT_Charter_Factor__c</columns>
        <columns>WT_Branch_Customer_TPC__c</columns>
        <columns>WT_Factor__c</columns>
        <columns>WT_Is_Processed__c</columns>
        <columns>WT_Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WT_Is_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Processed</label>
    </listViews>
    <listViews>
        <fullName>Processed</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WT_Is_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Processed</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Factor Location Staging</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Factor Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>